--- a/InsuranceSite/agent_information/agent_information.css
+++ b/InsuranceSite/agent_information/agent_information.css
@@ -55,8 +55,35 @@ nav .navbar-nav li a:hover {
     border-radius: 5px;
     padding: 8px 0px;
 }
+
 /* Navbar */
 
+
+.card {
+    margin: 0.5rem;
+    background: rgba(178, 225, 156, 0.2);
+    box-shadow: 0px 4px 4px rgb(62 135 27 / 25%);
+    border-radius: 15px;
+    /* overflow: hidden; */
+    padding: 0;
+    border: none;
+}
+
+.card-header {
+    background-color: #23BB86;
+    color: #FFFF;
+    text-align: start;
+    font-size: 21px;
+    border-radius: 15px 15px 0 0 !important;
+}
+
+.card-body h5 {
+    padding: 25px 35px 25px 0px;
+}
+
+.card-body .line-details {
+    border-bottom: 1px solid;
+}
 
 /* Footer */
 .language-footer {
@@ -71,6 +98,7 @@ nav .navbar-nav li a:hover {
     text-decoration-thickness: 2px;
     text-decoration-color: #1D5C2E;
 }
+
 /* Footer */
 
 
@@ -83,5 +111,51 @@ nav .navbar-nav li a:hover {
         width: 120px;
         padding: 6px 0px;
     }
+
     /* Navbar */
+
+    /* card-1 */
+    #card-1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        margin: 0;
+    }
+
+    #card-1 .card {
+        width: 24rem !important;
+    }
+
+    #card-1 .card-body {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #card-1 .card-body div {
+        display: flex;
+        flex-basis: max-content;
+    }
+
+    /* card-1 */
+
+    .card-body .line-details {
+        border: none;
+    }
+
+    /* card-2 */
+    #card-2 {
+        padding: 0;
+        margin: 0;
+    }
+
+    #card-2 .card-body div {
+        display: flex;
+        flex-direction: column !important;
+    }
+
+    /* card-2 */
+
+
 }
